# opensim

./: .gitattributes  .gitignore  .hgignore  ARCHITECTURE_ANALYSIS.md  Agent_Manager.cs  AssemblyInfo.cs  AssetManagement.cs  Asset_manager.cs  BUILDING.md  BUILDING.txt  COMPREHENSIVE_DEVELOPMENT_ROADMAP.md  CONTRIBUTORS.txt  CONTROL_PANEL_GUIDE.md  Class1.cs  Controller.cs  DOCUMENTATION_INDEX.md  Directory.Build.props  EXPANDED_IMPLEMENTATION_PLANNING.md  GRAPHICS_ENGINE_MODERNIZATION.md  Globals.cs  GridManager.cs  History.md  IMMEDIATE_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  InventoryManager.cs  LICENSE.txt  Login_manager.cs  MODERNIZATION_IMPACT_ANALYSIS.md  Main-sever.Designer.cs  Main-sever.cs  Makefile  NEXT_PHASE_ROADMAP.md  OGS.sql  OpenGridServices.build  OpenGridServices.sln  OpenSim.FxCop  OpenSim.build  OpenSim.sln  PHASE2_IMPLEMENTATION.md  (+51 more)
libraries/ode-0.9/: CHANGELOG.txt  Makefile.am  Makefile.in  README.txt  autogen.sh  configure  configure.in  ode-config.in  opensim_build_notes.txt
libraries/ode-0.9/GIMPACT/include/GIMPACT/: gim_boxpruning.h  gim_contact.h  gim_geometry.h  gim_math.h  gim_tri_collision.h
libraries/ode-0.9/GIMPACT/src/: gim_boxpruning.cpp  gim_trimesh_capsule_collision.cpp  gim_trimesh_ray_collision.cpp  gim_trimesh_trimesh_collision.cpp  gimpact.cpp
libraries/ode-0.9/OPCODE/: OPC_AABBCollider.cpp  OPC_BoxPruning.cpp  OPC_HybridModel.cpp  OPC_LSSCollider.cpp  OPC_MeshInterface.cpp  OPC_MeshInterface.h  OPC_Model.cpp  OPC_OptimizedTree.cpp  OPC_PlanesCollider.cpp  OPC_PlanesCollider.h  OPC_RayCollider.cpp  OPC_RayCollider.h  OPC_SphereCollider.cpp  OPC_SweepAndPrune.cpp  OPC_TreeBuilders.cpp  OPC_TreeCollider.cpp  Opcode.h
libraries/ode-0.9/OPCODE/Ice/: IceAABB.cpp  IceFPU.h  IceIndexedTriangle.cpp  IceMemoryMacros.h  IceOBB.cpp
libraries/ode-0.9/contrib/BreakableJoints/: README.txt  joint.cpp  joint.h  ode.cpp
libraries/ode-0.9/contrib/BreakableJoints/diff/: common.h.diff  joint.cpp.diff  joint.h.diff  step.cpp.diff  test_buggy.cpp.diff
libraries/ode-0.9/contrib/DotNetManaged/: Body.h  CommonMgd.h  DotNetManaged.sln  Geom.cpp  Joint.cpp  Joint.h  JointAMotor.cpp  JointBall.cpp  JointBall.h  JointFixed.h  JointGroup.cpp  JointGroup.h  JointHinge.cpp  JointHinge.h  JointHinge2.h  JointSlider.h  Space.cpp  Stdafx.cpp  Stdafx.h  TEST.h
libraries/ode-0.9/contrib/GeomTransformGroup/: GeomTransformGroup.cpp  GeomTransformGroup.h  README.txt
libraries/ode-0.9/contrib/Mac_CFMCarbon/: README.txt
libraries/ode-0.9/contrib/Mac_CFMCarbon/mac_source/: CommonPrefix.h  DebugPrefix.h  ExamplesPrefix.h  ODETestPrefix.h  ReleasePrefix.h
libraries/ode-0.9/contrib/Ode.NET/: Ode.NET.sln  README.TXT  premake.lua
libraries/ode-0.9/contrib/Ode.NET/Drawstuff/: AssemblyInfo.cs  (+1 more)
libraries/ode-0.9/contrib/OdeModelProcessor/: OdeModelProcessor.sln  README.TXT
libraries/ode-0.9/contrib/TerrainAndCone/: collision_std_internal.h  readme.txt  test_boxstackb.cpp
libraries/ode-0.9/contrib/dCylinder/: readme.txt
libraries/ode-0.9/contrib/dRay/: dRay.cpp  dRay_Box.cpp  dRay_Plane.cpp  dxRay.h
libraries/ode-0.9/docs/: annotated.html  collision_8h-source.html  collision__space_8h-source.html  common_8h-source.html  config_8h-source.html  contact_8h-source.html  error_8h-source.html  export-dif_8h-source.html  files.html  group__bodies.html  group__collide.html  group__collide__box.html  group__collide__sphere.html  group__disable.html  group__drawstuff.html  group__world.html  index.html  mass_8h-source.html  matrix_8h-source.html  memory_8h-source.html  misc_8h-source.html  objects_8h-source.html  ode_8h-source.html  odecpp_8h-source.html  odecpp__collision_8h-source.html  odemath_8h-source.html  structds_functions.html
libraries/ode-0.9/drawstuff/: Makefile.am
libraries/ode-0.9/drawstuff/dstest/: Makefile.am
libraries/ode-0.9/drawstuff/src/: Makefile.am  Makefile.in  drawstuff.cpp  osx.cpp  windows.cpp  x11.cpp
libraries/ode-0.9/drawstuff/textures/: sky.ppm  wood.ppm
libraries/ode-0.9/include/: Makefile.in
libraries/ode-0.9/include/ode/: Makefile.am  Makefile.in  common.h  config.h  config.h.in  odecpp.h  odemath.h
libraries/ode-0.9/ode/: Makefile.in
libraries/ode-0.9/ode/demo/: basket_geom.h  demo_I.cpp  demo_boxstack.cpp  demo_buggy.cpp  demo_chain2.cpp  demo_convex_cd.cpp  demo_crash.cpp  demo_cylvssphere.cpp  demo_friction.cpp  demo_heightfield.cpp  demo_hinge.cpp  demo_jointPR.cpp  demo_joints.cpp  demo_motor.cpp  demo_moving_trimesh.cpp  demo_ode.cpp  demo_slider.cpp  demo_space.cpp  demo_space_stress.cpp  demo_step.cpp  demo_trimesh.cpp  world_geom3.h
libraries/ode-0.9/ode/doc/: Doxyfile
libraries/ode-0.9/ode/src/: Makefile.am  Makefile.in  collision_cylinder_box.cpp  collision_cylinder_plane.cpp  collision_cylinder_sphere.cpp  collision_cylinder_trimesh.cpp  collision_kernel.cpp  collision_space.cpp  collision_std.h  collision_trimesh_box.cpp  collision_trimesh_ccylinder.cpp  collision_trimesh_distance.cpp  collision_trimesh_gimpact.cpp  collision_trimesh_opcode.cpp  collision_trimesh_plane.cpp  collision_trimesh_ray.cpp  collision_trimesh_sphere.cpp  collision_trimesh_trimesh_new.cpp  convex.cpp  cylinder.cpp  export-dif.cpp  heightfield.cpp  joint.cpp  joint.h  mass.cpp  objects.h  ode.cpp  odemath.cpp  quickstep.cpp  ray.cpp  rotation.cpp  sphere.cpp  step.cpp  timer.cpp  util.cpp
libraries/ode-0.9/tests/: Makefile.am  Makefile.in  main.cpp
libraries/ode-0.9/tests/CppTestHarness/: CppTestHarness.h  CppTestHarness.sln  HTMLTestReporter.cpp  HTMLTestReporter.h  Makefile.am  Makefile.in  PrintfTestReporter.cpp  PrintfTestReporter.h  ReadMe.txt  SignalTranslator.h  Test.cpp  Test.h  TestLauncher.h  TestReporter.cpp  TestReporter.h  TestResults.h  TestRunner.cpp  TestRunner.h  TypedTestLauncher.h
libraries/ode-0.9/tests/colliders/: box_sphere.cpp
libraries/ode-0.9/tools/: checklist.txt  ftp_msw_script  ftp_src_script  src-release.sh
libraries/ode-0.9\/ode/demo/: Makefile.am  Makefile.in  demo_basket.cpp  demo_chain1.c  demo_collision.cpp  demo_cyl.cpp  demo_feedback.cpp  demo_plane2d.cpp
(+8435 files in other folders)
