
noinst_LIBRARIES = libodetest.a

libodetest_a_SOURCES = \
  CheckMacros.h \
  Checks.h \
  CppTestHarness.h \
  HTMLTestReporter.cpp \
  HTMLTestReporter.h \
  PrintfTestReporter.cpp \
  PrintfTestReporter.h \
  SignalTranslator.h \
  Test.cpp \
  Test.h \
  TestLauncher.cpp \
  TestLauncher.h \
  TestMacros.h \
  TestReporter.cpp \
  TestReporter.h \
  TestResults.cpp \
  TestResults.h \
  TestRunner.cpp \
  TestRunner.h \
  TypedTestLauncher.h

libodetest_a_CXXFLAGS = @ARCHFLAGS@ -I$(top_srcdir)/include -I$(top_builddir)/include


